# astrograph

./: .astrographignore  .dockerignore  .gitignore  .mcp.json  CONTRIBUTING.md  DECISIONS_AND_TRADE_OFFS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: analyze_metrics.py  docker-release.sh  provoke_event_driven.py  release.sh  run_tripwire_stress.sh  stress_docker_mcp.py  test.py  tripwire.py
src/astograph/: index.py  server.py  tools.py
src/astrograph/: __init__.py  _paths.py  _sync_helpers.py  ast_to_graph.py  canonical_hash.py  cli.py  cloud_detect.py  entry_store.py  event_driven.py  ignorefile.py  index.py  lsp_setup.py  lsp_tools.py  persistence.py  server.py  stdio_transport.py  tools.py  watcher.py
src/astrograph/languages/: __init__.py  _brace_block_extractor.py  _configured_lsp_plugin.py  _js_ts_treesitter.py  _lsp_base.py  _semantic_tokens.py  _server_profiles.py  _treesitter_base.py  base.py  c_lsp_plugin.py  cpp_lsp_plugin.py  go_lsp_plugin.py  java_lsp_plugin.py  javascript_lsp_plugin.py  lsp_client.py  plugin_loader.py  python_lsp_plugin.py  python_plugin.py  registry.py  typescript_lsp_plugin.py
tests/: conftest.py  helpers.py  test_cli.py  test_cloud_detect.py  test_cpp_attach_e2e.py  test_e2e_docker.py  test_entry_store.py  test_event_driven.py  test_ignorefile.py  test_index_extended.py  test_lsp_client_coverage.py  test_lsp_setup.py  test_lsp_tools.py  test_paths.py  test_persistence.py  test_recommendations.py  test_semantic_tokens.py  test_server.py  test_stdio_transport.py  test_watcher.py  test_watcher_debounce.py
tests/languages/: conftest.py  test_lsp_client.py  test_lsp_plugin.py  test_plugin_loader.py  test_python_plugin.py  test_registry.py  test_semantic_signals.py
