[project]
name = "astograph"
version = "0.2.2"
description = "Detect structural code duplication using AST graph isomorphism"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "xxhash>=3.0.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "vulture>=2.10",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/Thaylo/astograph"
Repository = "https://github.com/Thaylo/astograph"
Issues = "https://github.com/Thaylo/astograph/issues"

[project.scripts]
astograph = "astograph.server:main"
astograph-cli = "astograph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astograph"]

[tool.hatch.build.targets.sdist]
include = ["src/astograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default: verbose for humans. Use scripts/test.py for AI-friendly output.
addopts = "-v --tb=short --no-header --cov=src/astograph --cov-report= --cov-fail-under=92"

[tool.coverage.run]
source = ["src/astograph"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
# AI-friendly: minimal output
show_missing = false
skip_covered = true
precision = 0

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
files = ["src/astograph"]

[[tool.mypy.overrides]]
module = ["networkx.*", "mcp.*", "xxhash.*", "watchdog.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
output-format = "concise"  # AI-friendly: "file:line:col: CODE message"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["astograph"]

[tool.vulture]
min_confidence = 80
paths = ["src/astograph"]
exclude = ["tests/"]
# FileSystemEvent is used in type annotations
ignore_names = ["FileSystemEvent"]
