[project]
name = "astrograph"
version = "0.5.75"
description = "MCP server for structural code duplication detection and language-aware semantic analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.0",
    "python-lsp-server>=1.11",
    "xxhash>=3.0.0",
    "watchdog>=4.0",
    "esprima>=4.0",
]

[project.optional-dependencies]
treesitter = [
    "tree-sitter>=0.23.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "vulture>=2.10",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/Thaylo/astrograph"
Repository = "https://github.com/Thaylo/astrograph"
Issues = "https://github.com/Thaylo/astrograph/issues"

[project.scripts]
astrograph = "astrograph.server:main"
astrograph-cli = "astrograph.cli:main"

[project.entry-points."astrograph.languages"]
python = "astrograph.languages.python_lsp_plugin:PythonLSPPlugin"
javascript_lsp = "astrograph.languages.javascript_lsp_plugin:JavaScriptLSPPlugin"
typescript_lsp = "astrograph.languages.typescript_lsp_plugin:TypeScriptLSPPlugin"
c_lsp = "astrograph.languages.c_lsp_plugin:CLSPPlugin"
cpp_lsp = "astrograph.languages.cpp_lsp_plugin:CppLSPPlugin"
java_lsp = "astrograph.languages.java_lsp_plugin:JavaLSPPlugin"
go_lsp = "astrograph.languages.go_lsp_plugin:GoLSPPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astrograph"]

[tool.hatch.build.targets.sdist]
include = ["src/astrograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
# Default: verbose for humans. Use scripts/test.py for AI-friendly output.
addopts = "-v --tb=short --no-header --cov=src/astrograph --cov-report= --cov-fail-under=92"

[tool.coverage.run]
source = ["src/astrograph"]
branch = true
omit = [
    "src/astrograph/languages/_treesitter_base.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]
omit = [
    "src/astrograph/languages/_treesitter_base.py",
]
# AI-friendly: minimal output
show_missing = false
skip_covered = true
precision = 0

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
files = ["src/astrograph"]

[[tool.mypy.overrides]]
module = ["networkx.*", "mcp.*", "xxhash.*", "watchdog.*", "tree_sitter.*", "anyio.*", "esprima.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
output-format = "concise"  # AI-friendly: "file:line:col: CODE message"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
# Base class with overridable methods — unused args are intentional
"src/astrograph/languages/_treesitter_base.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["astrograph"]

[tool.vulture]
min_confidence = 80
paths = ["src/astrograph"]
exclude = ["tests/"]
# FileSystemEvent is used in type annotations
ignore_names = ["FileSystemEvent", "auto_reindex"]
